edit qip course - note5

--- a/qip2023/index.html
+++ b/qip2023/index.html
@@ -148,15 +148,20 @@
 
         </li>
 		<li class="no-p-margin">
-            2022-11-13: Lectures 5 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
-            <p></p>
-
-        </li>
-		<li class="no-p-margin">
             2022-11-06: Homework 2 was released. Check [<a href="https://hpnl.ir/qip2023/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
         </li>
-		-->		
+		-->	
+		<li class="no-p-margin">
+            2023-10-17: Lectures 5 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>	
+		<li class="no-p-margin">
+            2023-10-17: Project0 and Homework1 were extended. Check [<a href="https://hpnl.ir/qip2023/assignments" target="_blank">ASSIGNMENTS</a>].
+            <p></p>
+
+        </li>			
 		<li class="no-p-margin">
             2023-10-15: Lecture 4 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
             <p></p>
