--- a/qip2023/index.html
+++ b/qip2023/index.html
@@ -103,11 +103,6 @@
 
         </li>			
 		<li class="no-p-margin">
-            2022-12-20: Project 1 was released. Check [<a href="https://hpnl.ir/qip2023/projects" target="_blank">PROJECTS</a>].
-            <p></p>
-
-        </li>
-		<li class="no-p-margin">
             2022-12-18: Lectures 10 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
             <p></p>
 
@@ -143,15 +138,26 @@
 
         </li>
 
+
+		-->
 		<li class="no-p-margin">
-            2022-11-06: Homework 2 was released. Check [<a href="https://hpnl.ir/qip2023/assignments" target="_blank">ASSIGNMENTS</a>].
+            2023-10-29: Lectures 7 & 8 were released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
             <p></p>
-        </li>
-		-->	
+
+        </li>		
+		<li class="no-p-margin">
+            2023-10-28: Project 1 was released. Check [<a href="https://hpnl.ir/qip2023/projects" target="_blank">PROJECTS</a>].
+            <p></p>
+
+        </li>		
 		<li class="no-p-margin">
             2023-10-22: Lectures 6 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
             <p></p>
 
+        </li>	
+		<li class="no-p-margin">
+            2023-10-22: Homework 2 was released. Check [<a href="https://hpnl.ir/qip2023/assignments" target="_blank">ASSIGNMENTS</a>].
+            <p></p>
         </li>		
 		<li class="no-p-margin">
             2023-10-17: Lectures 5 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
@@ -167,7 +173,11 @@
             2023-10-15: Lecture 4 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
             <p></p>
 
-        </li>		
+        </li>
+		<li class="no-p-margin">
+            2023-10-14: Paper Review 1 was released. Check [<a href="https://elearn.ut.ac.ir" target="_blank">ELEARN</a>].
+            <p></p>
+        </li>				
 		<li class="no-p-margin">
             2023-10-08: Homework 1 was released. Check [<a href="https://hpnl.ir/qip2023/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
