--- a/publications/index.html
+++ b/publications/index.html
@@ -192,11 +192,28 @@
 	
 	<h2 class="h2-header"> Top Journals </h2>
 	<hr width="100%">
-
+	
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 1. EneX: An Energy-Aware Execution Scheduler for Serverless Computing </b>
+				<b> 1. Age-Aware Dynamic Frame Slotted ALOHA for Machine-Type Communications </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TCOMM.2024.3351362" target="_blank">  <i class="fas fa-university"></i> </a>
+				<a>  <i class="far fa-file-pdf"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Communications / 2024 </i>
+		</div>
+	</div>
+	<hr width="50%">
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> 2. EneX: An Energy-Aware Execution Scheduler for Serverless Computing </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TII.2023.3290985" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -213,7 +230,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 2. A Generalized Residue Number System Design Approach for Ultra-Low Power Arithmetic Circuits Based on Deterministic Bit-streams </b>
+				<b> 3. A Generalized Residue Number System Design Approach for Ultra-Low Power Arithmetic Circuits Based on Deterministic Bit-streams </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TCAD.2023.3250603" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -230,7 +247,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 3. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
+				<b> 4. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1145/3510611" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -247,7 +264,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 4. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
+				<b> 5. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3217134" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -264,7 +281,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 5. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
+				<b> 6. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TKDE.2022.3207123" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -281,7 +298,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 6. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
+				<b> 7. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3146971" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -298,7 +315,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 7. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
+				<b> 8. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3149734" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -315,7 +332,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 8. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
+				<b> 9. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TC.2022.3141841" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -332,7 +349,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 9. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
+				<b> 10. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TVT.2020.3031662" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -349,7 +366,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 10. Customizing clos network-on-chip for neural networks </b>
+				<b> 11. Customizing clos network-on-chip for neural networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TC.2017.2715158" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -366,7 +383,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 11. Cost-effective low-delay design for multiparty cloud video conferencing </b>
+				<b> 12. Cost-effective low-delay design for multiparty cloud video conferencing </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TMM.2017.2710799" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -383,7 +400,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 12. Multiperiod network rate allocation with end-to-end delay constraints </b>
+				<b> 13. Multiperiod network rate allocation with end-to-end delay constraints </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TCNS.2017.2677202" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -400,7 +417,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 13. A dummy-based approach for preserving source rate privacy </b>
+				<b> 14. A dummy-based approach for preserving source rate privacy </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TIFS.2016.2515050" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -417,7 +434,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 14. DT-MAC: An Efficient and Scalable Medium Access Control Protocol for Wireless Networks </b>
+				<b> 15. DT-MAC: An Efficient and Scalable Medium Access Control Protocol for Wireless Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TWC.2012.010913.120698" target="_blank">  <i class="fas fa-university"></i> </a>
