edit publication, useful reads and useful links

--- a/publications/index.html
+++ b/publications/index.html
@@ -91,11 +91,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 1. FlowShark: Sampling for High Flow Visibility in SDNs </b>
+				<b> FlowShark: Sampling for High Flow Visibility in SDNs </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/INFOCOM48880.2022.9796658" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -108,11 +107,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 2. X-Layer: Building Composable Pipelined Dataflows for Low-Rank Convolutions </b>
+				<b> X-Layer: Building Composable Pipelined Dataflows for Low-Rank Convolutions </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/PACT52795.2021.00015" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -125,11 +123,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 3. SPAGHETTI: Streaming Accelerators for Highly Sparse GEMM on FPGAs </b>
+				<b> SPAGHETTI: Streaming Accelerators for Highly Sparse GEMM on FPGAs </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/HPCA51647.2021.00017" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -142,11 +139,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 4. Skippynn: An embedded stochastic-computing accelerator for convolutional neural networks </b>
+				<b> SkippyNN: An Embedded Stochastic-Computing Accelerator for Convolutional Neural Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1145/3316781.3317911" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -159,11 +155,10 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 5. Cost-effective low-delay cloud video conferencing </b>
+				<b> Cost-Effective Low-Delay Cloud Video Conferencing </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/ICDCS.2015.19" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -176,11 +171,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 6. On the construction of maximum-quality aggregation trees in deadline-constrained WSNs </b>
+				<b> On the Construction of Maximum-Quality Aggregation Trees in Deadline-Constrained WSNs </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/INFOCOM.2015.7218386" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -196,11 +190,28 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 1. Age-Aware Dynamic Frame Slotted ALOHA for Machine-Type Communications </b>
+				<b> Scaling Power Management in Cloud Data Centers: A Multi-Level Continuous-Time MDP Approach </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TSC.2024.3354202" target="_blank">  <i class="fas fa-university"></i> </a>
+				
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Services Computing / 2024 </i>
+		</div>
+	</div>
+	<hr width="50%">	
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> Age-Aware Dynamic Frame Slotted ALOHA for Machine-Type Communications </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TCOMM.2024.3351362" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
+				
 			</div>
 		</div>
 		<br>
@@ -213,11 +224,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 2. EneX: An Energy-Aware Execution Scheduler for Serverless Computing </b>
+				<b> EneX: An Energy-Aware Execution Scheduler for Serverless Computing </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TII.2023.3290985" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -230,11 +240,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 3. A Generalized Residue Number System Design Approach for Ultra-Low Power Arithmetic Circuits Based on Deterministic Bit-streams </b>
+				<b> A Generalized Residue Number System Design Approach for Ultra-Low Power Arithmetic Circuits Based on Deterministic Bit-streams </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TCAD.2023.3250603" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -247,11 +256,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 4. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
+				<b> Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1145/3510611" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -264,11 +272,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 5. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
+				<b> Layer-Aware Containerized Service Orchestration in Edge Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3217134" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -281,11 +288,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 6. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
+				<b> Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TKDE.2022.3207123" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -298,11 +304,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 7. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
+				<b> Minimizing Update Makespan in SDNs without TCAM Overhead </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3146971" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -315,11 +320,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 8. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
+				<b> Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3149734" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -332,11 +336,10 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 9. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
+				<b> Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TC.2022.3141841" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -349,11 +352,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 10. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
+				<b> Stability Region and Delay Analysis of a SWIPT-Based Two-Way Relay Network With Opportunistic Network Coding </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TVT.2020.3031662" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -366,11 +368,10 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 11. Customizing clos network-on-chip for neural networks </b>
+				<b> Customizing Clos Network-on-Chip for Neural Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TC.2017.2715158" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -383,11 +384,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 12. Cost-effective low-delay design for multiparty cloud video conferencing </b>
+				<b> Cost-Effective Low-Delay Design for Multiparty Cloud Video Conferencing </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TMM.2017.2710799" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -400,11 +400,10 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 13. Multiperiod network rate allocation with end-to-end delay constraints </b>
+				<b> Multiperiod Network Rate Allocation With End-to-End Delay Constraints </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TCNS.2017.2677202" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -417,11 +416,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 14. A dummy-based approach for preserving source rate privacy </b>
+				<b> A Dummy-Based Approach for Preserving Source Rate Privacy </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TIFS.2016.2515050" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
@@ -434,11 +432,10 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 15. DT-MAC: An Efficient and Scalable Medium Access Control Protocol for Wireless Networks </b>
+				<b> DT-MAC: An Efficient and Scalable Medium Access Control Protocol for Wireless Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TWC.2012.010913.120698" target="_blank">  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
 		<br>
