add course and alumni

--- a/alumni/index.html
+++ b/alumni/index.html
@@ -244,6 +244,11 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/ny.jpg" class="image--cover">
                     <p>Nadia Yazdani</p>
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/ali_derakhshan.png" class="image--cover">
+                    <p>Ali Derakhshan</p>
                 </div>					
 
             </div>		
