--- a/alumni/index.html
+++ b/alumni/index.html
@@ -162,7 +162,12 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/ag.jpg" class="image--cover">
                     <p>Abdollah Ghaffari Sheshjavani</p>
-                </div>		
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/bahereh_hassanpour.jpg" class="image--cover">
+                    <p>Seyedeh Bahereh Hassanpour</p>
+                </div>				
 
             </div>
         </div>
