add people and alumni

--- a/people/index.html
+++ b/people/index.html
@@ -161,12 +161,7 @@
                 <div class="image--cover-container">
 						<img src="/images/people/mm.jpg" class="image--cover">
                     <p>Mojtaba Mozhganfar</p>
-                </div>
-				
-                <div class="image--cover-container">
-						<img src="/images/people/amirhossein_mehrvarz.jpg" class="image--cover">
-                    <p>Amir Hossein Mehrvarz</p>
-                </div>		
+                </div>	
 
                 <div class="image--cover-container">
 						<img src="/images/people/zeynab_kabiri.jpg" class="image--cover">
@@ -216,7 +211,12 @@
                 <div class="image--cover-container">
 						<img src="/images/people/parsa_heidari.jpg" class="image--cover">
                     <p>Parsa Heidari</p>
-                </div>									
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/people/shayan_daneshyar.jpeg" class="image--cover">
+                    <p>Shayan Daneshyar</p>
+                </div>						
 
             </div>		
         </div>		
