--- a/alumni/index.html
+++ b/alumni/index.html
@@ -254,6 +254,11 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/ali_derakhshan.png" class="image--cover">
                     <p>Ali Derakhshan</p>
+                </div>		
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/amirhossein_mehrvarz.jpg" class="image--cover">
+                    <p>Amir Hossein Mehrvarz</p>
                 </div>					
 
             </div>		
