edit Research Highlight Notes

--- a/useful-reads/research-highlight-notes.html
+++ b/useful-reads/research-highlight-notes.html
@@ -90,11 +90,11 @@
 
 <p>#2 Motivation behind this problem (why this problem is important and interesting?).</p>
 
-<p>#3 Challenges of the problem (summary 1to 3 is research gap).</p>
+<p>#3 Challenges of the problem (summary: items 1 to 3 are highlighting the "research gap").</p>
 
 <p>#4 Your contribution (what is new in your problem solution) (1 to 4 are very important).</p>
 
-<p>#5 How you improved the current research and how much is the improvement (does it worth to do a lot of efforts to reach this improvement) so marginal improvements are not justifiable except your method opens a new line of research.</p>
+<p>#5 How you improved the current research. Then measure the achieved improvement (does it worth to do a lot of efforts to reach this improvement). So marginal improvements are not justifiable except your method opens a new line of research or proposes a new theory.</p>
 
 <p>#6 How you evaluate your proposed method (a- analytical, b- simulation, c- emulation, d-real implementation and do the measurements).</p>
 
