--- a/people/ahmad-khonsari.html
+++ b/people/ahmad-khonsari.html
@@ -103,8 +103,8 @@
                      <div>
                         <h3>Education</h3>
                         <ul>
-                           <li>Ph.D., Computer Science, University of Glasgow (2000-2003)</li>
-                           <li>M.Sc., Computer Architecture, Iran University of Science and Technology (1993-1996)</li>
+                           <li>Ph.D., Computer Science, University of Glasgow (2000-2003) - PhD Supervisor: Prof. Mohamed Ould Khaoua</li>
+                           <li>M.Sc., Computer Architecture, Iran University of Science and Technology (1993-1996) - MSc Supervisor: Prof. Mahmood Fathy</li>
                            <li>B.Sc., Computer Engineering, Shahid Beheshti University (1986-1990)</li>
                         </ul>
                      </div>
