edit Comprehensive Exam

--- a/useful-reads/comprehensive-exam.html
+++ b/useful-reads/comprehensive-exam.html
@@ -89,7 +89,7 @@
 
 <p>#1 The first 4 chapters of the "D.P. Bertsekas, J. N. Tsitsiklis, Introduction to Probability, Athena Scientific; 2008." book.</p>
 
-<p>#2 My lectures and voices in "Performance Evaluation of Computer Systems Course <a href="https://hpnl.ir/useful-reads/comprehensive-exam" target="_blank" >https://hpnl.ir/useful-reads/comprehensive-exam</a>", from the beginning lecture to the end of "#9 Lecture5-2".</p>
+<p>#2 My lectures and voices in "Performance Evaluation of Computer Systems Course <a href="https://pecs2024.hpnl.ir/lectures" target="_blank" >https://pecs2024.hpnl.ir/lectures</a>", from the beginning lecture to the end of "#9 Lecture5-2".</p>
 
   </div>
       </div>
