--- a/publications/index.html
+++ b/publications/index.html
@@ -190,6 +190,23 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
+				<b> Cost-Effective Activity Control of Asymptomatic Carriers in Layered Temporal Social Networks </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TCSS.2024.3392715" target="_blank">  <i class="fas fa-university"></i> </a>
+				
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Computational Social Systems / 2024 </i>
+		</div>
+	</div>
+	<hr width="50%">		
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
 				<b> Scaling Power Management in Cloud Data Centers: A Multi-Level Continuous-Time MDP Approach </b>
 			</div>
 			<div class="paper-icon">
