--- a/alumni/index.html
+++ b/alumni/index.html
@@ -259,7 +259,17 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/amirhossein_mehrvarz.jpg" class="image--cover">
                     <p>Amir Hossein Mehrvarz</p>
-                </div>					
+                </div>
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/behrad_mahmoudi.png" class="image--cover">
+                    <p>Behrad Mahmoudi</p>
+                </div>		
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/mm.jpg" class="image--cover">
+                    <p>Mojtaba Mozhganfar</p>
+                </div>						
 
             </div>		
         </div>	
