--- a/alumni/index.html
+++ b/alumni/index.html
@@ -262,7 +262,7 @@
                 </div>
 
                 <div class="image--cover-container">
-						<img src="/images/alumni/behrad_mahmoudi.png" class="image--cover">
+						<img src="/images/alumni/behrad_mahmoudi.jpg" class="image--cover">
                     <p>Behrad Mahmoudi</p>
                 </div>		
 
