--- a/alumni/index.html
+++ b/alumni/index.html
@@ -269,7 +269,12 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/mm.jpg" class="image--cover">
                     <p>Mojtaba Mozhganfar</p>
-                </div>						
+                </div>
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/mina_faridi.jpg" class="image--cover">
+                    <p>Mina Faridi</p>
+                </div>					
 
             </div>		
         </div>	
