--- a/people/index.html
+++ b/people/index.html
@@ -137,8 +137,10 @@
                 </div>					
 
                 <div class="image--cover-container">
+                  <a href="/people/Sina-Ojaghi.html" target="_blank">
 						<img src="/images/people/sina_ojaghi.jpg" class="image--cover">
                     <p>Sina Ojaghi</p>
+                  </a>
                 </div>							
  
                 <div class="image--cover-container">
