--- a/people/Sina-Ojaghi.html
+++ b/people/Sina-Ojaghi.html
@@ -89,7 +89,7 @@
                      <div class="text-center mt-5">
                         <img src="/images/people/sina_ojaghi.jpg" class="avatar">
                         <h1>Sina Ojaghi</h1>
-                        <h3>Ph.D.</h3>
+                        <h3>Ph.D. Candidate</h3>
                         <h6>sina[dot]ojaghi[at]ut[dot]ac[dot]ir</h6>
                         <ul class="list-inline list-unstyled">
                            <li class="list-inline-item"><a target="blank" href="https://sinaoj.com/"><i class="fab fa-internet-explorer"></i></a></li>						
