--- a/alumni/index.html
+++ b/alumni/index.html
@@ -160,7 +160,8 @@
                 </div>			
 				
                 <div class="image--cover-container">
-						<img src="/images/alumni/ag.jpg" class="image--cover">
+			<a href="https://scholar.google.com/citations?user=Jih3eCUAAAAJ&hl=en" target="_blank">			
+			<img src="/images/alumni/ag.jpg" class="image--cover">
                     <p>Abdollah Ghaffari Sheshjavani</p>
                 </div>	
 
