--- a/publications/index.html
+++ b/publications/index.html
@@ -91,6 +91,22 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
+				<b> ALPHAS: Adaptive Bitrate Ladder Optimization for Multi-Live Video Streaming </b>
+			</div>
+			<div class="paper-icon">
+				<a href="#" target="_blank">  <i class="fas fa-university"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Conference on Computer Communications (INFOCOM) / 2025 </i>
+		</div>
+	</div>
+	<hr width="50%">
+
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
 				<b> FlowShark: Sampling for High Flow Visibility in SDNs </b>
 			</div>
 			<div class="paper-icon">
