--- a/people/mahdi-dolati.html
+++ b/people/mahdi-dolati.html
@@ -92,12 +92,12 @@
                         <h3>Ph.D.</h3>
                         <h6>mahdidolati[at]ut[dot]ac[dot]ir</h6>
                         <ul class="list-inline list-unstyled">
-                           <li class="list-inline-item"><a target="blank" href="/people/mahdi-dolati.html"><i class="fab fa-internet-explorer"></i></a></li>						
+                           <li class="list-inline-item"><a target="blank" href="https://sharif.edu/~mdolati"><i class="fab fa-internet-explorer"></i></a></li>						
                            <li class="list-inline-item"><a target="blank" href="https://www.linkedin.com/in/mahdi-dolati-a71bb45a/"><i class="fab fa-linkedin"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://scholar.google.ca/citations?user=b7A2CXYAAAAJ&hl=en"><i class="fab fa-google"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://www.researchgate.net/profile/Mahdi_Dolati"><i class="fab fa-researchgate"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://orcid.org/0000-0002-0778-1378"><i class="fab fa-orcid"></i></a></li>
-						   <li class="list-inline-item"><a target="blank" href="https://www.webofscience.com/wos/author/record/2263898"><i class="fa fa-user-circle" aria-hidden="true"></i></a></li>						   
+						   <li class="list-inline-item"><a target="blank" href="https://www.webofscience.com/wos/author/record/2263898"><i class="ai ai-dblp" style="font-size:1.3rem"></i></a></li>						   
                         </ul>
                      </div>
                      <div>
