--- a/people/sina-ojaghi.html
+++ b/people/sina-ojaghi.html
@@ -96,8 +96,8 @@
                            <li class="list-inline-item"><a target="blank" href="https://www.linkedin.com/in/sina-ojaghi"><i class="fab fa-linkedin"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://scholar.google.com/citations?user=1NJF8awAAAAJ&hl=en&oi=ao"><i class="fab fa-google"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://www.researchgate.net/profile/Sina-Ojaghi"><i class="fab fa-researchgate"></i></a></li>
-                           <li class="list-inline-item"><a target="blank" href="https://join.skype.com/invite/HFvbHgQg7dM3"><i class="fab fa-skype"></i></a></li>
-						   <li class="list-inline-item"><a target="blank" href="https://github.com/sinaojaghi"><i class="fa fa-github" aria-hidden="true"></i></a></li>						   
+                           <li class="list-inline-item"><a target="blank" href="https://join.skype.com/invite/HFvbHgQg7dM3"><i class="fab fa-skype" style="font-size:1.4rem"></i></a></li>
+						   <li class="list-inline-item"><a target="blank" href="https://github.com/sinaojaghi"><i class="fa fa-github" style="font-size:1.3rem"></i></a></li>						   
                         </ul>
                      </div>
                      <div>
