--- a/alumni/index.html
+++ b/alumni/index.html
@@ -269,15 +269,25 @@
                 </div>		
 
                 <div class="image--cover-container">
-						<img src="/images/alumni/mm.jpg" class="image--cover">
+						<img src="/images/alumni/default.png" class="image--cover">
                     <p>Mojtaba Mozhganfar</p>
                 </div>
 
                 <div class="image--cover-container">
 						<img src="/images/alumni/mina_faridi.jpg" class="image--cover">
                     <p>Mina Faridi</p>
-                </div>					
+                </div>
 
+                <div class="image--cover-container">
+						<img src="/images/alumni/zeynab_kabiri.jpg" class="image--cover">
+                    <p>Zeynab Kabiri Zarinfar</p>
+                </div>
+				
+                <div class="image--cover-container">
+						<img src="/images/alumni/hadi_foroughi.jpg" class="image--cover">
+                    <p>Mohammad Hadi Foroughi</p>
+                </div>				
+				
             </div>		
         </div>	
 
