--- a/people/index.html
+++ b/people/index.html
@@ -193,6 +193,11 @@
                 <div class="image--cover-container">
 						<img src="/images/people/shayan_daneshyar.jpeg" class="image--cover">
                     <p>Shayan Daneshyar</p>
+                </div>		
+
+                <div class="image--cover-container">
+						<img src="/images/people/niaz_ghafarian.jpg" class="image--cover">
+                    <p>Niaz Ghafarian</p>
                 </div>						
 
             </div>		
