--- a/people/index.html
+++ b/people/index.html
@@ -193,12 +193,22 @@
                 <div class="image--cover-container">
 						<img src="/images/people/shayan_daneshyar.jpeg" class="image--cover">
                     <p>Shayan Daneshyar</p>
-                </div>		
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/people/elham_rahimi.jpeg" class="image--cover">
+                    <p>Elham Rahimi</p>
+                </div>					
 
                 <div class="image--cover-container">
 						<img src="/images/people/niaz_ghafarian.jpg" class="image--cover">
                     <p>Niaz Ghafarian</p>
-                </div>						
+                </div>			
+
+                <div class="image--cover-container">
+						<img src="/images/people/ali_ghorbani.jpg" class="image--cover">
+                    <p>Ali Ghorbani Bargani</p>
+                </div>					
 
             </div>		
         </div>		
