--- a/people/index.html
+++ b/people/index.html
@@ -208,7 +208,22 @@
                 <div class="image--cover-container">
 						<img src="/images/people/ali_ghorbani.jpg" class="image--cover">
                     <p>Ali Ghorbani Bargani</p>
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/people/mohammad_soleimaninasab.jpg" class="image--cover">
+                    <p>Mohammad Soleimani Nasab</p>
                 </div>					
+
+                <div class="image--cover-container">
+						<img src="/images/people/fateme_nabati.png" class="image--cover">
+                    <p>Fateme Nabati</p>
+                </div>		
+
+                <div class="image--cover-container">
+						<img src="/images/people/zahra_aynedast.jpg" class="image--cover">
+                    <p>Zahra Aynedast</p>
+                </div>				
 
             </div>		
         </div>		
