--- a/people/index.html
+++ b/people/index.html
@@ -188,7 +188,12 @@
                 <div class="image--cover-container">
 						<img src="/images/people/parsa_heidari.jpg" class="image--cover">
                     <p>Parsa Heidari</p>
-                </div>	
+                </div>
+
+                <div class="image--cover-container">
+						<img src="/images/people/default.png" class="image--cover">
+                    <p>Seyed Ali Aghamiri</p>
+                </div>					
 
                 <div class="image--cover-container">
 						<img src="/images/people/shayan_daneshyar.jpeg" class="image--cover">
@@ -223,7 +228,12 @@
                 <div class="image--cover-container">
 						<img src="/images/people/zahra_aynedast.jpg" class="image--cover">
                     <p>Zahra Aynedast</p>
-                </div>				
+                </div>		
+
+                <div class="image--cover-container">
+						<img src="/images/people/default.png" class="image--cover">
+                    <p>Ali Mehrvarz</p>
+                </div>						
 
             </div>		
         </div>		
