--- a/alumni/index.html
+++ b/alumni/index.html
@@ -169,6 +169,11 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/bahereh_hassanpour.jpg" class="image--cover">
                     <p>Seyedeh Bahereh Hassanpour</p>
+                </div>			
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/shabnam_seradji.png" class="image--cover">
+                    <p>Shabnam Seradji</p>
                 </div>				
 
             </div>
