--- a/people/ahmad-khonsari.html
+++ b/people/ahmad-khonsari.html
@@ -24,7 +24,7 @@
   <link rel='stylesheet' id='open-sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.2.4' type='text/css' media='all' />
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:600italic,600,400,400italic' rel='stylesheet' type='text/css'>
   <script src="https://kit.fontawesome.com/4d10f83d96.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">  
   </head>
 
 
@@ -157,6 +157,20 @@
          </div>
       </div>
    </div>
+ <!-- This div is a placeholder which will contain the publications -->
+ <div id="pubszone">
+   Loading publications...
+ </div>
+ <!-- Function which will handle the content received through JSONP -->
+ <script type='text/javascript'>
+ //<![CDATA[
+     function mycallback(ad_content) {
+     	document.getElementById('pubszone').innerHTML = ad_content.html;
+     }
+ //]]>
+ </script>
+ <!-- Load of the remote JS which will call the callback function -->
+ <script src="https://www.csauthors.net/ahmad-khonsari/embed/bib.js?callback=mycallback"></script>
 </body>
       </div>
     </div>
